@@ -1,8 +1,8 @@
 
-R version 2.13.0 Patched (2011-04-19 r55507)
+R version 2.13.1 Patched (2011-07-08 r56327)
 Copyright (C) 2011 The R Foundation for Statistical Computing
 ISBN 3-900051-07-0
-Platform: x86_64-unknown-linux-gnu (64-bit)
+Platform: i386-pc-mingw32/i386 (32-bit)
 
 R is free software and comes with ABSOLUTELY NO WARRANTY.
 You are welcome to redistribute it under certain conditions.
@@ -6275,11 +6275,11 @@ Error in .C(sym$address, NULL) :
 > foo()
 callFunc(default = TRUE)
 > foo(given = TRUE)
-callFunc(default = TRUE, given = TRUE)
+callFunc(given = TRUE)
 > foo("blah blah")
-callFunc(default = TRUE, given = "blah blah")
+callFunc(given = "blah blah")
 > foo(given = TRUE)
-callFunc(default = TRUE, given = TRUE)
+callFunc(given = TRUE)
 > foo()
 callFunc(default = TRUE)
 > ## altered foo() in 2.8.1.
@@ -6311,7 +6311,7 @@ function(given = NULL) {
 > print(foo, useSource = FALSE)
 function (given = NULL) 
 {
-    callObj <- quote(callFunc(default = TRUE))
+    callObj <- quote(callFunc())
     if (!is.null(given)) 
         callObj$given <- given
     if (is.null(given)) 
@@ -6322,7 +6322,7 @@ function (given = NULL)
 > foo
 function (given = NULL) 
 {
-    callObj <- quote(callFunc(default = TRUE))
+    callObj <- quote(callFunc())
     if (!is.null(given)) 
         callObj$given <- given
     if (is.null(given)) 
